feat: add image print support
